feat: deprecate clear cache endpoints
