# packages/admin/src/types.ts
@@ -25,8 +25,6 @@ export interface AdminContext extends AdminAdapter {
 }
 
 export enum HttpPaths {
-  ClearPurchase = '/clear/purchase',
-  ClearRebalance = '/clear/rebalance',
   PausePurchase = '/pause/purchase',
   PauseRebalance = '/pause/rebalance',
   PauseOnDemandRebalance = '/pause/ondemand-rebalance',
